add gc stat